Challenge Completed! As you said go crazy make it as flashy as you want So, I have added if and else if conditions to change background color of App according to answers. such as No = RED, Yes = Green and I Have No Idea = Yellow ! default is holo_blue_light.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="title">Make Everyday Decisions Easier !</string>
+    <string name="m_img">Ball_Image</string>
+    <string name="btn_txt">ASK</string>
+
 </resources>
